# magmasl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt
examples/: CMakeLists.txt
include/magma/ast/: decl.h  node.h  translation_unit.h  visitor.h
include/magma/parse/: parser.h
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt  decl.c++  node.c++  translation_unit.c++  visitor.c++
lib/parse/: CMakeLists.txt  magma.lex  magma.yacc  parser.c++  scanner.h  tokens.h  yacc.sed
test/: CMakeLists.txt
tools/: CMakeLists.txt
tools/magmac/: CMakeLists.txt  magmac.c++
